fixed spacing

--- a/frontend/src/pages/Home/Style.css
+++ b/frontend/src/pages/Home/Style.css
@@ -1,4 +1,66 @@
 .container {
+  display: flex;
   flex: 1;
-  padding: 10
+  flex-direction: column;
+  height: 100vh;
+  width: 100%;
+
+}
+.header {
+  display: flex;
+  flex-direction: column;
+}
+
+.body{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  /* background-color: salmon; */
+  height: 100vh;
+}
+.resume{
+  display: flex;
+  justify-content: center;
+  width: 80%;
+  height: 550px;
+}
+.aboutInfo{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+.contact {
+    display: flex;
+    flex: 1;
+    flex-direction: row ;
+}
+
+.contact p {
+  display: flex;
+  flex: 1;
+  flex-direction: row;
+  justify-content: center;
+  gap: 1rem;
+
+}
+
+a {
+  text-decoration: none;
+  color: black;
+  transition: .25s ease-in;
+}
+
+a:hover{
+  color: aqua;
+  transform: scale(1.05, 1.05);
+}
+a:visited{
+  color: forestgreen;
+}
+
+.footer{
+  display:flex;
+  justify-content: center;
 }
